Trying to upload a file from the device to the Octoprint in app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         <activity android:name=".selectFileActivity"/>
         <activity android:name=".moveHeadActivity"/>
         <activity android:name=".printActivity"/>
+        <activity android:name=".fileChooserActivity"/>
+        <activity android:name=".firebaseActivity"/>
 
         <activity
             android:name=".barcode.BarcodeCaptureActivity"
