--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'joda-time:joda-time:2.10.1'
 
+    implementation 'com.google.firebase:firebase-storage:16.1.0'
+    implementation 'com.google.firebase:firebase-auth:16.2.1'
+
 
 }
 repositories {
