fileChooserActivity with three buttons added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".selectFileActivity"/>
         <activity android:name=".moveHeadActivity"/>
         <activity android:name=".printActivity"/>
+        <activity android:name=".fileChooserActivity"/>
 
         <activity
             android:name=".barcode.BarcodeCaptureActivity"
