--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".moveHeadActivity"/>
         <activity android:name=".printActivity"/>
         <activity android:name=".fileChooserActivity"/>
+        <activity android:name=".Firebase_Activity"/>
 
         <activity
             android:name=".barcode.BarcodeCaptureActivity"
