--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 01 12:23:51 CDT 2019
-sdk.dir=C\:\\Users\\leoba\\AppData\\Local\\Android\\Sdk
+#Wed May 01 12:11:18 CDT 2019
+sdk.dir=C\:\\Users\\Jay\\AppData\\Local\\Android\\Sdk
